[project]
name = "pubmed-fetcher-cli-pavan"
version = "0.1.0"
description = "CLI tool to fetch and filter PubMed research papers"
authors = [{ name = "Pavan Kalyan", email = "pavanneelam96@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "requests",
    "rich",
    "python-dotenv",
    "fpdf"
]

[project.scripts]
pubmed-cli = "pubmed_fetcher.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
