[project]
name = "pubmed-fetcher-cli-pavan"
version = "0.1.1"
description = "CLI tool to fetch and filter PubMed research papers"
authors = [{ name = "Pavan Kalyan", email = "pavanneelam96@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "requests",
    "rich",
    "python-dotenv",
    "fpdf",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:numpy.core._multiarray_umath",
]

[tool.poetry]
packages = [
  { include = "pubmed_fetcher", from = "src" }
]
[tool.poetry.scripts]
pubmed-fetcher = "pubmed_fetcher.cli:main"

